--- a/README
+++ b/README
@@ -8,7 +8,7 @@ This code calculates the conductivities in a basic tight-binding model (2D squar
 DOWNLOADING:
 
 In command line on a bash termianl (represented here with the "$" sign), type:
-$ hg clone https://bitbucket.org/quantique-udes/onebody
+$ hg clone https://bitbucket.org/mnmpdadish/onebody
 
 ##########
 COMPILING:
