--- a/README
+++ b/README
@@ -1,16 +1,16 @@
-######
-#README
-######
+##########
+# README #
+##########
 
 This code calculates the conductivities in a basic tight-binding model (2D square lattice).
 
-
-############
+################
 MAIN REPOSITORY:
 
-To get the most recent version of the source cod on this project,
-in command line on a bash termianl (represented here with the "$" sign), type:
+To get the most recent version of the source code on this project,
+in command line on a bash terminal (represented here with the "$" sign), type:
 $ hg clone https://bitbucket.org/mnmpdadish/onebody
+
 
 ##########
 COMPILING:
@@ -32,7 +32,7 @@ and on Mp:
 mp$ module add gcc/6.1.0 cuba/4.0 intel64/13.1.3.192
 
 The makefile is written to detect the mammouth version automatically. 
-The make command will generate the binary file "oneBody" in the root directory.
+The "make" command will generate the binary file "oneBody" in the root directory.
 
 
 #############
@@ -45,7 +45,7 @@ gfortran: Tested with version 4.6.4. Must be recent enough.
 Gnuplot: Any version of gnuplot should be enough to run the program properly, 
          but the code was developped using version 5.0. One can turn off this 
          dependency by removing the "-DINTERACTIVE" option in the makefile. This
-         will prevent to use the interactive version "./oneBody i" of the code.
+         will prevent to use the interactive version "$ ./oneBody i" of the code.
          
 Cuba: An integration library available via http://www.feynarts.de/cuba/
       Version 4.0 or higher should be used to work and compile correctly.
@@ -95,9 +95,9 @@ on how to reproduce these results by running the code are found in "example/READ
 
 #####
 Reviewer: Maxime Charlebois
-Date: 8 october 2017
-Tested on Linux Ubuntu LTS 12.04 and 16.04
-quantique-udes v1.1 compliant
+Date: 15th november 2017
+Tested on Linux Ubuntu LTS 12.04 and 16.04, Lubuntu 16.10
 
-
+www.physique.usherbrooke.ca/source_code 
+code submission procedure v1.2 compliant
 
