--- a/README
+++ b/README
@@ -2,37 +2,29 @@
 # README #
 ##########
 
-This code calculates the conductivities in a basic tight-binding model (2D square lattice).
+This code calculates the spectral weight and DOS (2D square lattice).
+The most interesting part is the interactive plot that can explore 
+a simple one-body model through using gnuplot.
+
 
 ################
 MAIN REPOSITORY:
 
 To get the most recent version of the source code on this project,
 in command line on a bash terminal (represented here with the "$" sign), type:
-$ hg clone https://bitbucket.org/mnmpdadish/onebody
+$ git clone https://github.com/mnmpdadish/c2B.git
 
 
 ##########
 COMPILING:
 
-In order to compile, install gcc, gfortran, Gnuplot, Cuba, Lapack and BLAS 
-on your computer and type in the source code root directory:
+In order to compile, install gcc, gfortran, Lapack, Gnuplot and 
+Cuba (optional) on your computer and type in the source code 
+root directory:
+
 $ make
 
-This approach should work on Linux and Mac. 
-For mammouth, it is more appropriate to load the correct module instead of 
-installing any new libraries. 
-
-On Ms, type:
-
-ms$ module add gcc/6.4.0 cuba/4.0 intel64/12.1.3.293
-
-and on Mp:
-
-mp$ module add gcc/6.1.0 cuba/4.0 intel64/13.1.3.192
-
-The makefile is written to detect the mammouth version automatically. 
-The "make" command will generate the binary file "oneBody" in the root directory.
+This very simple makefile should work on Linux and Mac. 
 
 
 #############
@@ -42,23 +34,36 @@ gcc: Tested with version 4.8.1. Must be recent enough.
 
 gfortran: Tested with version 4.6.4. Must be recent enough.
 
-Gnuplot: Any version of gnuplot should be enough to run the program properly, 
-         but the code was developped using version 5.0. One can turn off this 
-         dependency by removing the "-DINTERACTIVE" option in the makefile. This
-         will prevent to use the interactive version "$ ./oneBody i" of the code.
-         
-Cuba: An integration library available via http://www.feynarts.de/cuba/
-      Version 4.0 or higher should be used to work and compile correctly.
-
 Lapack: Tested with version 3.5.0. Must be recent enough.
+
+Gnuplot: Any version of gnuplot should be enough to run the interactive
+         version of the program properly, "$ ./c2B i" but the code was 
+         developped using version 5.0. If gnuplot is not installed, the 
+         interactive version will not work. 
+
+         Troubleshooting:
+         - If the interactive task stop, install a compatible version of Gnuplot
+         - If the program does not stop but no gnuplot graph appears,
+           make sure you have the right terminal. By default, QT is used,
+           but you can also choose x11 or wxt. Check which terminal is use by default
+           by starting gnuplot, the line "Terminal type set to 'qt'" to specify
+           which terminal is used. Then change the terminal in the makefile before 
+           compilation using either the option "-DQT" for 'qt', "-DWXT" for 'wxt' or
+           "-DX11" for 'x11'. By default, 'qt' is used.
+
+Cuba:      An integration library available via http://www.feynarts.de/cuba/
+(optional) Version 4.0 or higher should be used to work and compile correctly.
+           This is only required in the calculation of the DOS, but by default
+           this functionnality is turned off. To enable it, one must install
+           Cuba and add the flag -DCUBA to the compilation option in the makefile.
 
 ####
 RUN:
 
 To check how to use the code, type:
-$ ./oneBody
+$ ./c2B
 
-Read this help to learn about the different tasks available ('i', 'd', 'l', 'mdc').
+Read this help to learn about the different tasks available ('i', 'mdc', 'dos').
 Any other task than the help needs a "para.dat" file that specify the model 
 parameters. An example of a "para.dat" file is contained in the "example" 
 directory. The "para.dat" file can contain the following parameters:
@@ -70,11 +75,6 @@ t     nearest neighbor hopping energy
 tp    second nearest neighbor hopping energy
 tpp   third nearest neighbor hopping energy
 M     antiferromagntic energy
-D     superconductivity energy
-
-nMu   number of Mu to calculate
-muMin minimum Mu of the loop
-muMax maximum Mu of the loop
 
 VERBOSE level of verbose of the program
 EPSREL  relative error demanded
@@ -83,7 +83,8 @@ MAXEVAL maximum number of evaluations
 MINEVAL minimum number of evaluations
 
 If any of these parameters are not found, default parameters will be used 
-(and printed on the screen).
+(and printed on the screen). The programme "c2B" should be run in the
+directory where the file "para.dat" is.
 
 
 #########
@@ -93,11 +94,11 @@ Examples of results files are found in the "example" directory. Informations
 on how to reproduce these results by running the code are found in "example/README".
 
 
-#####
-Reviewer: Maxime Charlebois
-Date: 15th november 2017
-Tested on Linux Ubuntu LTS 12.04 and 16.04, Lubuntu 16.10
+######
+USAGE:
 
-www.physique.usherbrooke.ca/source_code 
-code submission procedure v1.2 compliant
+This software is released under MIT License (see LICENSE file). Please consider citing
+this code and the associated arxiv and PRL article if you reuse this code for
+your own research.
+
 
