--- a/example/README
+++ b/example/README
@@ -5,25 +5,25 @@
 In order to reproduce the results in the "results" directory, simply type 
 (in the present directory):
 
-$ oneBody l
-
-to produce the "n.out" file, and:
-
 $ oneBody mdc
 
 to produce the "mdc.dat" file. 
 
-"n.out" contains the density (n) as a function of the chemical potential (mu).
 "mdc.dat" contains an image of the Momentum density curve as a function of kx and ky.
 
 Plot in gnuplot with:
-gnuplot> plot 'n.out' u 1:2 w lp
 gnuplot> plot 'mdc.dat' matrix with image
-
-With the present "para.dat" file, the task "d" should calculate the value: "n = 0.775159".
 
 The user can also run an interactive version of the code, to visualize via gnuplot the Fermi
 surface as a function of the parameters with the command:
 
 $ oneBody i
 
+Cycle through the different Fermi surfaces by pressing 'g' in the ineractive mode. This
+reproduce the Fig 1e,d,f,c respectivly. If you want to obtain the same results with the
+task 'mdc', change the 'periodization parameter in para.dat:
+
+0 = green          (Fig. 1e)
+1 = cumulant       (Fig. 1d)
+2 = compact tiling (Fig. 1f)
+3 = exact          (Fig. 1c)
