--- a/fig1/README
+++ b/fig1/README
@@ -20,8 +20,8 @@ surface as a function of the parameters with the command:
 
 $ c2B i
 
-Cycle through the different Fermi surfaces by pressing 'g' in the ineractive mode. This
-reproduce the Fig 1e,d,f,c respectivly. If you want to obtain the same results with the
+Cycle through the different Fermi surfaces by pressing 'g' in the interactive mode. This
+reproduce the Fig 1e,d,f,c respectively. If you want to obtain the same results with the
 task 'mdc', change the 'periodization parameter in para.dat:
 
 0 = green          (Fig. 1e)
