--- a/fig2/README
+++ b/fig2/README
@@ -32,8 +32,8 @@ surface as a function of the parameters with the command:
 
 $ c2B i
 
-Cycle through the different Fermi surfaces by pressing 'g' in the ineractive mode. This
-reproduce the Fig 1e,d,f,c respectivly. If you want to obtain the same results with the
+Cycle through the different Fermi surfaces by pressing 'g' in the interactive mode. This
+reproduce the Fig 1e,d,f,c respectively. If you want to obtain the same results with the
 task 'mdc', change the 'periodization parameter in para.dat:
 
 0 = green          (Fig. 2g)
@@ -41,5 +41,5 @@ task 'mdc', change the 'periodization parameter in para.dat:
 2 = compact tiling (not published)
 3 = exact          (not published)
 
-Try changine the "mu" and "eta" to obtain all the spectral weight 
+Try changing the "mu" and "eta" to obtain all the spectral weight 
 of Fig. 2.
